dynamic Update AFT and restrictions